# openenv-data-cleaning

./: .gitignore  .huggingfaceignore  Dockerfile  README.md  __init__.py  check_live_deployment.py  client.py  deploy_hf.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  verify_endpoints.py
finale/: Blog.MD  Dockerfile  README.md  __init__.py  deploy_hf.py  inference.py  models.py  openenv.yaml  pyproject.toml  quick_test.py  requirements.txt  validate_format.py
finale/server/: app.py  environment.py  hospital.py  patients.py
finale/training/: generate_expert_data.py  triage_ai_grpo.ipynb  triage_train.py
server/: __init__.py  app.py  environment.py
